# azure-osconfig

src/adapters/pnp/daemon/: osconfig.json
src/agents/pnp/daemon/: osconfig.json
src/cmake/templates/: osconfig.spec.in
src/common/ansibleutils/: AnsibleUtils.c
src/modules/: CMakeLists.txt
src/modules/ansible/src/lib/: Ansible.c  AnsibleUtils.c  AnsibleUtils.h  CMakeLists.txt  JsonUtils.c  JsonUtils.h
src/modules/asb/src/lib/: Asb.c  Asb.h  CMakeLists.txt  asc_audits.json  cis_audits.json  common_audits.json  ssh_audits.json
src/modules/asb/src/so/: AsbModule.c  CMakeLists.txt
src/modules/mim/: users-ansible.json  users-chef-infra.json  users-cloud-init.json  users-puppet.json  users.json
src/modules/users/: CMakeLists.txt  README.md
src/modules/users/ansible/src/lib/: CMakeLists.txt  Users.c  ansible-exec.py
src/modules/users/ansible/src/so/: CMakeLists.txt  UsersModule.c
src/modules/users/chef/: README.md
src/modules/users/chef-infra/src/lib/: CMakeLists.txt  Users.c  chef-exec.rb
src/modules/users/chef/src/lib/: CMakeLists.txt  Users.c  Users.h  chef-exec.rb
src/modules/users/cloud-init/src/lib/: CMakeLists.txt  Users.c  cloud-init-exec.py
src/modules/users/puppet/src/lib/: CMakeLists.txt  Users.c  puppet-exec.rb
src/modules/users/src/lib/: Users.c  chef-exec.rb
